--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^7.1.0",
+    "cypress-cucumber-preprocessor": "^4.1.0",
     "cypress-file-upload": "^5.0.5",
     "cypress-localstorage-commands": "^1.4.3",
     "cypress-xpath": "^1.6.2",
