--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   },
   "dependencies": {
     "cypress-downloadfile": "^1.2.0"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
   }
 }
